--- a/templates/users.html
+++ b/templates/users.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello</h1>
-    {% for user in users %}
+{% extends 'base.html' %}
+{block content}
+{% for user in users %}
     {{user.name}}
     {{user.assets}}
     {{user.amount}}
     {{user.price_paid}}
     {{user.date_of_purchase}}
-    {% endfor %}
-</body>
-</html>
+{% endfor %}
+{% endblock %}
