create a bag.html added and form template inserted

--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -15,7 +15,7 @@
                 {% for coin in data %}
               <tr>
                 <td>{{coin.symbol}}</td>
-                <td>{{coin.name}}</td>
+                <td><strong>{{coin.name}}</strong></td>
                 <td>{{"${:.2f}".format(coin.quote['USD']['price'])}}</td>
                 {% if  coin.quote['USD']['percent_change_24h'] > 0 %}
                 <td style="border: solid 1px;" class="center-align green">+{{"{:.2f}%".format(coin.quote['USD']['percent_change_24h']) }}</td>
