--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -2,18 +2,24 @@
 
 {% block content %}
 <div class="row">
-    <form class="col s12">
+    <form action="" method="POST" class="col s12">
       <div class="row">
         <div class="input-field col s12">
-          <i class="material-icons prefix">account_circle</i>
-          <input id="icon_prefix" type="text" class="validate">
-          <label for="icon_prefix">First Name</label>
+          <i class="material-icons prefix">control_point</i>
+          <input id="assets" type="text" name="assets" placeholder="Coin to add" class="validate">
         </div>
         <div class="input-field col s12">
-          <i class="material-icons prefix">phone</i>
-          <input id="icon_telephone" type="tel" class="validate">
-          <label for="icon_telephone">Telephone</label>
+          <i class="material-icons prefix">info</i>
+          <input id="amount_name="amount" type="text" placeholder="Add amount" class="validate">
         </div>
+        <div class="input-field col s12">
+            <i class="material-icons prefix">payment</i>
+            <input id="price_paid" name="price_paid" type="text" placeholder="Payment" class="validate">
+          </div>
+          <div class="input-field col s12">
+            <i class="material-icons prefix">date_range</i>
+            <input id="date_of_purchase" name="date_of_purchase" type="text" placeholder="date of purchase" class="datepicker">   
+          </div>
       </div>
     </form>
   </div>
