--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('.datepicker').datepicker();
+            $('select').formSelect();
         });
     </script>
 
