--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -4,9 +4,16 @@
 <div class="row">
     <form action="" method="POST" class="col s12">
       <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">control_point</i>
-          <input id="assets" type="text" name="assets" placeholder="Coin to add" class="validate">
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">control_point</i>
+            <select>
+              {% for coin in data %}
+              <option value="1">{{coin.symbol}}</option>
+              {% endfor %}
+            </select>
+            <label>Add a coin</label>
+          </div>
         </div>
         <div class="input-field col s12">
           <i class="material-icons prefix">info</i>
