--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -2,32 +2,43 @@
 
 {% block content %}
 <div class="row">
-    <form action="" method="POST" class="col s12">
+  <form action="{{url_for('add_to_bagz')}}" method="POST" class="col s12">
+    <div class="row">
       <div class="row">
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="material-icons prefix">control_point</i>
-            <select>
-              {% for coin in data %}
-              <option value="1">{{coin.symbol}}</option>
-              {% endfor %}
-            </select>
-            <label>Add a coin</label>
-          </div>
+        <div class="input-field col s12">
+          <i class="material-icons prefix">control_point</i>
+          <select id="assets" name="assets" type="text" class="validate">
+            <option value="" disabled selected>Choose your option</option>
+            {% for coin in data %}
+            <option value="{{coin.symbol}}">{{coin.symbol}}</option>
+            {% endfor %}
+          </select>
+          <label>Add a coin</label>
         </div>
+      </div>
+      <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">info</i>
-          <input id="amount_name="amount" type="text" placeholder="Add amount" class="validate">
+          <input id="amount" name="amount" type="text" placeholder="Add amount" class="validate">
         </div>
-        <div class="input-field col s12">
-            <i class="material-icons prefix">payment</i>
-            <input id="price_paid" name="price_paid" type="text" placeholder="Payment" class="validate">
-          </div>
-          <div class="input-field col s12">
-            <i class="material-icons prefix">date_range</i>
-            <input id="date_of_purchase" name="date_of_purchase" type="text" placeholder="date of purchase" class="datepicker">   
-          </div>
       </div>
-    </form>
-  </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">payment</i>
+          <input id="price_paid" name="price_paid" type="text" placeholder="Payment" class="validate">
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">date_range</i>
+          <input id="date_of_purchase" name="date_of_purchase" type="text" placeholder="date of purchase"
+            class="datepicker">
+        </div>
+      </div>
+      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <i class="material-icons right">send</i>
+      </button>
+    </div>
+  </form>
+</div>
 {% endblock %}
