--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -35,7 +35,7 @@
             class="datepicker">
         </div>
       </div>
-      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+      <button class="btn waves-effect waves-light" type="submit">Submit
         <i class="material-icons right">send</i>
       </button>
     </div>
