attempt to add % P&L formula to user.html

--- a/templates/users.html
+++ b/templates/users.html
@@ -5,10 +5,11 @@
         <tr>
             <th>Ticker</th>
             <th>Amount</th>
-            <th>PAID Price</th>
+            
             <th>Value</th>
             <th>Purcahse Date</th>
             <th>Current Price</th>
+            <th>percent diff</th>
         </tr>
     </thead>
     <tbody>
@@ -16,13 +17,18 @@
         {% for user in users %}
         {% set value = user.amount|float * user.price_paid|float %}       
         <td>{{user.assets}}</td>
-        <td>{{user.amount}}</td>
-        <td>{{"${:.2f}".format(user.price_paid|float)}}</td>
+        <td>{{user.amount}} x {{"${:.2f}".format(user.price_paid|float)}}</td>
+        
         <td>{{"${:.2f}".format(value)}}</td>
         <td>{{user.date_of_purchase}}</td>
         {% for coin in data %}
         {% if user.assets == coin.symbol %}
-        <td>{{"${:.2f}".format(coin.quote['USD']['price'])}}</td>
+        <td>{{"${:.4f}".format(coin.quote['USD']['price'])}}</td>
+       
+        {% set v1 = value %}
+        {% set v2 = coin.quote['USD']['price'] %}
+        {% set percent_diff = (v2 - v1) / 2 * 100 %}
+        <td>{{"{:.2f}%".format(percent_diff)}}</td>
         {% endif %}
         {% endfor %}       
     </tbody>
