--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
         $(document).ready(function () {
             $('.datepicker').datepicker();
             $('select').formSelect();
+            $('.collapsible').collapsible();
         });
     </script>
 
