--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
     {% block content %}
         
-        <table>
+        <table class="responsive-table">
             <thead>
               <tr>
                   <th>Ticker</th>
@@ -14,14 +14,14 @@
             <tbody>
                 {% for coin in data %}
                 
-              <tr>
+              <tr class="z-depth-3">
                 <td>{{coin.symbol}}</td>
                 <td><strong>{{coin.name}}</strong></td>
                 <td>{{"${:.2f}".format(coin.quote['USD']['price'])}}</td>
                 {% if  coin.quote['USD']['percent_change_24h'] > 0 %}
-                <td style="border: solid 1px;" class="center-align green">+{{"{:.2f}%".format(coin.quote['USD']['percent_change_24h']) }}</td>
+                <td class="center-align green">+{{"{:.2f}%".format(coin.quote['USD']['percent_change_24h']) }}</td>
                 {% else %}
-                <td style="border: solid 1px;" class="center-align red">{{"{:.2f}%".format(coin.quote['USD']['percent_change_24h']) }}</td>
+                <td class="center-align red">{{"{:.2f}%".format(coin.quote['USD']['percent_change_24h']) }}</td>
                 {% endif %}
               </tr>
               {% endfor %}
