--- a/templates/edit_bag.html
+++ b/templates/edit_bag.html
@@ -1,44 +1,44 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h3>Edit Bag</h3>
 <div class="row">
-  <form action="{{}}" method="POST" class="col s12">
-    <div class="row">
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">control_point</i>
-          <select id="assets" name="assets" type="text" class="validate">
-            <option value="" disabled selected>Choose your option</option>
-            {% for coin in data %}
-            <option value="{{coin.symbol}}">{{coin.symbol}}</option>
-            {% endfor %}
-          </select>
-          <label>Add a coin</label>
+    <form action="{{url_for('update_bag', bag_id=bag._id)}}" method="POST" class="col s12">
+        <div class="row">
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">control_point</i>
+                    <select id="assets" name="assets" type="text" class="validate">
+                        <label>Edit a coin</label>
+                        {% for coin in data %}
+                        <option value="{{bag.assets}}">{{coin.symbol}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">info</i>
+                    <input id="amount" name="amount" type="text" value="{{bag.amount}}" class="validate">
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">payment</i>
+                    <input id="price_paid" name="price_paid" type="text" value="{{bag.price_paid}}" class="validate">
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">date_range</i>
+                    <input id="date_of_purchase" name="date_of_purchase" type="text" value="{{bag.date_of_purchase}}"
+                        class="datepicker">
+                </div>
+            </div>
+            <button class="btn waves-effect waves-light" type="submit">Submit
+                <i class="material-icons right">send</i>
+            </button>
         </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">info</i>
-          <input id="amount" name="amount" type="text" placeholder="Add amount" class="validate">
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">payment</i>
-          <input id="price_paid" name="price_paid" type="text" placeholder="Payment" class="validate">
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">date_range</i>
-          <input id="date_of_purchase" name="date_of_purchase" type="text" placeholder="date of purchase"
-            class="datepicker">
-        </div>
-      </div>
-      <button class="btn waves-effect waves-light" type="submit">Submit
-        <i class="material-icons right">send</i>
-      </button>
-    </div>
-  </form>
+    </form>
 </div>
 {% endblock %}
