--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -32,7 +32,7 @@
         <td>{{ "${:.2f}".format(current_value)}}</td>
          {% endif %}
          {% endfor %}
-        <td><a class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">edit</i></a></td>
+        <td><a href="{{url_for('edit_bag', bag_id=user._id)}}" class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">edit</i></a></td>
         <td><a class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a></td>      
     </tbody>
     {% endfor %}
