database.net cdn import for sorting of coin list colums and paging if needed

--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
     {% block content %}
         
-        <table>
+        <table id="myTable" class="table-sortable">
             <thead>
               <tr>
                   <th>Rank</th>
@@ -11,7 +11,7 @@
                   <th>Price</th>
                   <th>24hr Change</th>
                   <th>Circulating Supply</th>
-                  <th> Volume (24h)</th>
+                  <th>Volume (24h)</th>
                   <!-- Market Cap	 Market Cap	Volume (24h)	Circulating Supply	Change (24h)	 -->
               </tr>
             </thead>
