--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -35,9 +35,9 @@
             class="datepicker">
         </div>
       </div>
-      <button class="btn waves-effect waves-light" type="submit">Submit
-        <i class="material-icons right">send</i>
-      </button>
+      <button class="btn-floating waves-effect waves-light" type="submit">
+        <i class="material-icons">send</i>
+    </button>
     </div>
   </form>
 </div>
