--- a/templates/edit_bag.html
+++ b/templates/edit_bag.html
@@ -39,8 +39,8 @@
                         class="datepicker">
                 </div>
             </div>
-            <button class="btn waves-effect waves-light" type="submit">Submit
-                <i class="material-icons right">send</i>
+            <button class="btn-floating waves-effect waves-light" type="submit">
+                <i class="material-icons">send</i>
             </button>
         </div>
     </form>
