tidy up of sort features removed form delete edit columns and removed paging and search on my bags

--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
     {% block content %}
         
-        <table id="myTable" class="table-sortable">
+        <table id="myCoinTable">
             <thead>
               <tr>
                   <th>Rank</th>
