--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {%block content%}
-<table>
+<table id="mybagTable" class="">
     <thead>
         <tr>
             <th>Ticker</th>
@@ -15,25 +15,33 @@
         </tr>
     </thead>
     <tbody>
-    {% for user in users %}
-    {% set value = user.amount|float * user.price_paid|float %}
-        <td>{{user.assets}}</td>
-        <td>{{user.amount}} x {{"${:.2f}".format(user.price_paid|float)}}</td>
-        <td>{{"${:.4f}".format(value)}}</td>
-        <td>{{user.date_of_purchase}}</td>
-         {% for coin in data %}
-         {% if user.assets == coin.symbol %}
-        <td>{{"${:.2f}".format(coin.quote['USD']['price'])}}</td>
-         {% set v1 = user.price_paid|float %}
-         {% set v2 = coin.quote['USD']['price']|float %}
-         {% set percent_diff = (v2 - v1) / v1 * 100 %}
-        <td>{{"{:.2f}%".format(percent_diff)}}</td>
-         {% set current_value = user.amount|float * coin.quote['USD']['price']|float %}
-        <td>{{ "${:.2f}".format(current_value)}}</td>
-         {% endif %}
-         {% endfor %}
-        <td><a href="{{url_for('edit_bag', bag_id=user._id)}}" class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">edit</i></a></td>
-        <td><a href="{{url_for('delete_bag', bag_id=user._id)}}" class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a></td>      
+
+        {% for user in users %}
+        <tr>
+            {% set value = user.amount|float * user.price_paid|float %}
+            <td>{{user.assets}}</td>
+            <td>{{user.amount}} x {{"${:.2f}".format(user.price_paid|float)}}</td>
+            <td>{{"${:.4f}".format(value)}}</td>
+            <td>{{user.date_of_purchase}}</td>
+            {% for coin in data %}
+            {% if user.assets == coin.symbol %}
+            <td>{{"${:.2f}".format(coin.quote['USD']['price'])}}</td>
+            {% set v1 = user.price_paid|float %}
+            {% set v2 = coin.quote['USD']['price']|float %}
+            {% set percent_diff = (v2 - v1) / v1 * 100 %}
+            <td>{{"{:.2f}%".format(percent_diff)}}</td>
+            {% set current_value = user.amount|float * coin.quote['USD']['price']|float %}
+            <td>{{ "${:.2f}".format(current_value)}}</td>
+            {% endif %}
+            {% endfor %}
+            <td><a href="{{url_for('edit_bag', bag_id=user._id)}}"
+                    class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">edit</i></a>
+            </td>
+            <td><a href="{{url_for('delete_bag', bag_id=user._id)}}"
+                    class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        {% endfor %}
     </tbody>
-    {% endfor %}
+
     {% endblock %}
