--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -19,7 +19,7 @@
         {% for user in users %}
         <tr>
             {% set value = user.amount|float * user.price_paid|float %}
-            <td>{{user.assets}}</td>
+            <td class="current_asset">{{user.assets}}</td>
             <td>{{user.amount}} x {{"${:.2f}".format(user.price_paid|float)}}</td>
             <td>{{"${:.4f}".format(value)}}</td>
             <td>{{user.date_of_purchase}}</td>
@@ -39,7 +39,7 @@
             <td class="profit-box algin-center red">{{"{:,.2f}%".format(percent_diff)}}</td>
             {% endif %}
             {% set current_value = user.amount|float * coin.quote['USD']['price']|float %}
-            <td>{{ "${:.2f}".format(current_value)}}</td>
+            <td class="current_value">{{ "${:.2f}".format(current_value)}}</td>
             {% endif %}
             {% endfor %}
             <td><a href="{{url_for('edit_bag', bag_id=user._id)}}"
@@ -51,5 +51,9 @@
         </tr>
         {% endfor %}
     </tbody>
+</table>
+<div class="container">
+    <div class="ct-chart ct-perfect-fourth"></div>
+</div>
 
     {% endblock %}
