--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="container">
+  <h3 class="center-align">Top 50 Cryptos</h3>
+  <div class="global_stats">
+    <span>Current Market Cap:  {{"${:,.0f}".format(global_data['quote']['USD']['total_market_cap'])}}</span>
+    <span>Bitcion Dominance: {{"{:.2f}%".format(global_data['btc_dominance'])}}</span>
+    <span>Cryptocurrencies:  {{global_data['total_cryptocurrencies']}}</span>
+  </div>
+</div>
 
 <table id="myCoinTable">
   <thead>
@@ -34,8 +42,8 @@
       {% else %}
       <td class="profit-box center-align red">{{"{:.2f}%".format(coin.quote['USD']['percent_change_24h']) }}</td>
       {% endif %}
-      <td>{{"{:.0f}".format(coin.circulating_supply)}}</td>
-      <td>{{"${:.0f}".format(coin.quote['USD']['volume_24h']) }}</td>
+      <td>{{"{:,.0f}".format(coin.circulating_supply)}}</td>
+      <td>{{"${:,.0f}".format(coin.quote['USD']['volume_24h']) }}</td>
     </tr>
     {% endfor %}
   </tbody>
