--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,3 +6,12 @@
     justify-content: space-around;
     display: flex;
 }
+
+.login-form{
+    margin: 20px;
+    border: solid 1px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
