--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <div class="row">
-  <form action="{{url_for('add_to_bagz')}}" method="POST" class="col s12">
+  <form action="{{url_for('add_to_bagz', username = session['username'])}}" method="POST" class="col s12">
     <div class="row">
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">control_point</i>
-          <select id="assets" name="assets" type="text" class="validate">
+          <select id="assets" name="asset" type="text" class="validate">
             <option value="" disabled selected>Choose your option</option>
             {% for coin in data %}
             <option value="{{coin.symbol}}">{{coin.symbol}}</option>
