--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -42,17 +42,13 @@
             <td class="current_value">{{ "${:.2f}".format(current_value)}}</td>
             {% endif %}
             {% endfor %}
-            <td><a href="{{url_for('edit_bag', bag_id=pos._id)}}"
+            <td><a href="{{url_for('edit_bag', username = session['username'], bag_id=pos._id)}}"
                     class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">edit</i></a>
             </td>
             <td><a href="{{url_for('delete_bag', bag_id=pos._id)}}"
                     class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a>
             </td>
         </tr>
-        {% endfor %}
-
-        {% for pos in positions %}
-        {{pos._id}}
         {% endfor %}
     </tbody>
 </table>
