--- a/templates/edit_bag.html
+++ b/templates/edit_bag.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h3>Edit Bag</h3>
 <div class="row">
-    <form action="{{url_for('update_bag', bag_id=bag._id)}}" method="POST" class="col s12">
+    <form action="{{url_for('update_bag', bag_id=bag_id)}}" method="POST" class="col s12">
         <div class="row">
             <div class="row">
                 <div class="input-field col s12">
