able to update exsisting positions (edit current previous creations) with the edit button on edit page

--- a/templates/edit_bag.html
+++ b/templates/edit_bag.html
@@ -3,18 +3,18 @@
 {% block content %}
 <h3>Edit Bag</h3>
 <div class="row">
-    <form action="{{url_for('update_bag', bag_id=bag_id)}}" method="POST" class="col s12">
+    <form action="{{url_for('update_bag', username = session['username'], bag_id=bag_id)}}" method="POST" class="col s12">
         <div class="row">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">control_point</i>
-                    <select id="assets" name="asset" type="text" class="validate">
+                    <select id="assets" name="asset" value="{{bag.asset}}" type="text" class="validate">
                         <label>Edit a coin</label>
                         {% for coin in data %}
                         {% if bag.asset == coin.symbol %}
-                        <option value="{{bag.asset}}" selected >{{coin.symbol}}</option>
+                        <option value="{{bag.asset}}"selected >{{coin.symbol}}</option>
                         {% else %}
-                        <option value="{{bag.asset}}" >{{coin.symbol}}</option>
+                        <option>{{coin.symbol}}</option>
                         {% endif %}
                         {% endfor %}
                     </select>
