--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -45,7 +45,7 @@
             <td><a href="{{url_for('edit_bag', username = session['username'], bag_id=pos._id)}}"
                     class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">edit</i></a>
             </td>
-            <td><a href="{{url_for('delete_bag', bag_id=pos._id)}}"
+            <td><a href="{{url_for('delete_bag',username = session['username'], bag_id=pos._id)}}"
                     class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a>
             </td>
         </tr>
