--- a/templates/coin_list.html
+++ b/templates/coin_list.html
@@ -20,6 +20,7 @@
       <th>24hr Change</th>
       <th>Circulating Supply</th>
       <th>Volume (24h)</th>
+      <th>Favorite</th>
       <!-- Market Cap	 Market Cap	Volume (24h)	Circulating Supply	Change (24h)	 -->
     </tr>
   </thead>
@@ -44,6 +45,12 @@
       {% endif %}
       <td>{{"{:,.0f}".format(coin.circulating_supply)}}</td>
       <td>{{"${:,.0f}".format(coin.quote['USD']['volume_24h']) }}</td>
+      <td><div class="center-align">
+        <span class="material-icons favorite">
+        star_border
+        </span>
+      </div>
+      </td>
     </tr>
     {% endfor %}
   </tbody>
