added a basic log out route and trying to create better way of storing and editing data

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
                 <li><a href="{{url_for('coin_list', username = session['username'])}}">Coin List</a></li>
                 <li><a href="{{url_for('get_my_bagz', username = session['username'])}}">My Bagz</a></li>
                 <li><a href="{{url_for('create_a_bag', username = session['username'])}}">Add a bag</a></li>
+                <li><a href="{{url_for('logout', username = session['username'])}}">Logout</a></li>
             </ul>
         </div>
     </nav>
