--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -5,12 +5,13 @@
         <tr>
             <th>Ticker</th>
             <th>Amount</th>
-            <th>Price paid</th>
-            <th>Purcahse Date</th>
-            <th>Current Price</th>
-            <th>percent diff</th>
             <th>Current Value</th>
+            <th>Price paid</th>
+            <th>Price Diff</th>
+            <th>Current Price</th>
+            <th>Purcahse Date</th>
             <th>Edit</th>
+            <th>Add</th>
             <th>Delete</th>
         </tr>
     </thead>
@@ -19,31 +20,36 @@
         {% for pos in positions %}
         <tr>
             {% set value = pos.amount|float * pos.price_paid|float %}
-            <td>{{pos.asset}}</td>
-            <td>{{pos.amount}} x {{"${:.2f}".format(pos.price_paid|float)}}</td>
-            <td>{{"${:.2f}".format(value)}}</td>
-            <td>{{pos.date_of_purchase}}</td>
             {% for coin in data %}
             {% if pos.asset == coin.symbol %}
-            {% if coin.quote['USD']['price'] > 1 %}
-            <td>{{"${:.2f}".format(coin.quote['USD']['price'])}}</td>
-            {% else %}
-            <td>{{"${:.5f}".format(coin.quote['USD']['price'])}}</td>
-            {% endif %}
+            <td>{{pos.asset}}</td>
             {% set v1 = pos.price_paid|float %}
             {% set v2 = coin.quote['USD']['price']|float %}
             {% set percent_diff = (v2 - v1) / v1 * 100 %}
+            {% set current_value = pos.amount|float * coin.quote['USD']['price']|float %}
+
+            {% if coin.quote['USD']['price'] > 1 %}
+            <td>{{pos.amount}} x {{"${:.2f}".format(coin.quote['USD']['price'])}}</td>
+            {% else %}
+            <td>{{pos.amount}} x {{"${:.5f}".format(coin.quote['USD']['price'])}}</td>
+            {% endif %}
+            <td class="pieChart_value">{{ "${:.2f}".format(current_value)}}</td>
+            <td>{{"${:.2f}".format(pos.price_paid|float)}}</td>
             {% if percent_diff > 0 %}
             <td class="profit-box algin-center green">{{"+{:,.2f}%".format(percent_diff)}}</td>
             {% else %}
             <td class="profit-box algin-center red">{{"{:,.2f}%".format(percent_diff)}}</td>
             {% endif %}
-            {% set current_value = pos.amount|float * coin.quote['USD']['price']|float %}
-            <td class="current_value">{{ "${:.2f}".format(current_value)}}</td>
+            <td>{{pos.date_of_purchase}}</td>
+            <td>{{"${:.2f}".format(value)}}</td>
+
             {% endif %}
             {% endfor %}
             <td><a href="{{url_for('edit_bag', username = session['username'], bag_id=pos._id)}}"
                     class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">edit</i></a>
+            </td>
+            <td><a href="{{url_for('add_to_bag', username = session['username'], bag_id=pos._id, bag=bag)}}"
+                    class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">add</i></a>
             </td>
             <td><a href="{{url_for('delete_bag',username = session['username'], bag_id=pos._id)}}"
                     class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a>
@@ -56,4 +62,4 @@
     <div class="ct-chart ct-perfect-fourth"></div>
 </div>
 
-    {% endblock %}
+{% endblock %}
