added ReadMe template

--- a/templates/add_to_bag.html
+++ b/templates/add_to_bag.html
@@ -54,7 +54,7 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input placeholder="{{bag.amount}}" id="amount" type="text" class="validate">
+                    <input placeholder="{{bag.amount}}" name="amount" id="amount" type="text" class="validate">
                     <label for="Amount of units">Amount of {{bag.asset}} bought</label>
                 </div>
             </div>
