--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -4,11 +4,11 @@
     <thead>
         <tr>
             <th>Ticker</th>
-            <th>Amount</th>
+            <th>Positions</th>
             <th>Current Value</th>
-            <th>Price paid</th>
+            <th>AVG Buy per unit</th>
             <th>Price Diff</th>
-            <th>Current Price</th>
+            <th>Amount invested</th>
             <th>Purcahse Date</th>
             <th>Edit</th>
             <th>Add</th>
@@ -16,7 +16,6 @@
         </tr>
     </thead>
     <tbody>
-
         {% for pos in positions %}
         <tr>
             {% set value = pos.amount|float * pos.price_paid|float %}
@@ -33,22 +32,22 @@
             <td>{{pos.amount}} x {{"${:.5f}".format(coin.quote['USD']['price'])}}</td>
             {% endif %}
             <td class="pieChart_value">{{ "${:.2f}".format(current_value)}}</td>
-            <td>{{"${:.2f}".format(pos.price_paid|float)}}</td>
+            <td>{{"${:.3f}".format(pos.price_paid|float)}}</td>
             {% if percent_diff > 0 %}
             <td class="profit-box algin-center green">{{"+{:,.2f}%".format(percent_diff)}}</td>
             {% else %}
             <td class="profit-box algin-center red">{{"{:,.2f}%".format(percent_diff)}}</td>
             {% endif %}
-            <td>{{pos.date_of_purchase}}</td>
             <td>{{"${:.2f}".format(value)}}</td>
-
+            <td>{{pos.date_of_purchase}}</td>
             {% endif %}
             {% endfor %}
             <td><a href="{{url_for('edit_bag', username = session['username'], bag_id=pos._id)}}"
                     class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">edit</i></a>
             </td>
-            <td><a href="{{url_for('add_to_bag', username = session['username'], bag_id=pos._id, bag=bag)}}"
-                    class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">add</i></a>
+            <td><a href="{{url_for('add_to_bag', username = session['username'], bag_id=pos._id)}}"
+                    class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">add</i></a>
+            </td>
             </td>
             <td><a href="{{url_for('delete_bag',username = session['username'], bag_id=pos._id)}}"
                     class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">delete</i></a>
@@ -56,6 +55,7 @@
         </tr>
         {% endfor %}
     </tbody>
+
 </table>
 <div class="container">
     <div class="ct-chart ct-perfect-fourth"></div>
