--- a/templates/create_a_bag.html
+++ b/templates/create_a_bag.html
@@ -3,13 +3,13 @@
 {% block content %}
 <div class="row">
   <form action="{{url_for('add_to_bagz', username = session['username'])}}" method="POST" class="col s12">
-    <input id="amount" name="_id" type="hidden" value="{{_id}}" class="validate">
+    <input id="_id" name="_id" type="hidden" value="{{_id}}" class="validate">
     <div class="row">
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">control_point</i>
           <select id="assets" name="asset" type="text" class="validate">
-            <option value="" disabled selected>Choose your option</option>
+            <option value="" disabled selected>Choose your Crypto</option>
             {% for coin in data %}
             <option value="{{coin.symbol}}">{{coin.symbol}}</option>
             {% endfor %}
@@ -20,19 +20,19 @@
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">info</i>
-          <input id="amount" name="amount" type="number" min="0" step="0.001" placeholder="Add amount" class="validate">
+          <input id="amount" name="amount" type="number" min="0" step="0.001" placeholder="Amount of coins/units" class="validate">
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <i class="material-icons prefix">payment</i>
-          <input id="price_paid" name="price_paid"  type="number" min="0" step="0.001" placeholder="Payment" class="validate">
+          <i class="material-icons prefix">monetization_on</i>
+          <input id="price_paid" name="price_paid"  type="number" min="0" step="0.0001" placeholder="Price per coin/unit in USD" class="validate">
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">date_range</i>
-          <input id="date_of_purchase" name="date_of_purchase" type="date" placeholder="date of purchase"
+          <input id="date_of_purchase" name="date_of_purchase" type="text" placeholder="date of purchase"
             class="datepicker">
         </div>
       </div>
