--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,10 @@
 <header>
     <nav>
         <div class="nav-wrapper">
-            <a href="{{url_for('get_my_bagz', username = session['username'])}}" class="brand-logo">My Crypto Tracker App</a>
+
+            <a href="{{url_for('get_my_bagz', username = session['username'])}}" class="brand-logo">Digi Market
+                Cap</a>
+
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="{{url_for('coin_list', username = session['username'])}}">Coin List</a></li>
                 <li><a href="{{url_for('get_my_bagz', username = session['username'])}}">My Bagz</a></li>
@@ -28,7 +31,7 @@
 </header>
 
 <body>
-    
+
     <div class="container">
         {% block content %}
         {% endblock %}
