--- a/templates/edit_bag.html
+++ b/templates/edit_bag.html
@@ -29,7 +29,7 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix">payment</i>
+                    <i class="material-icons prefix">monetization_on</i>
                     <input id="price_paid" name="price_paid" type="text" value="{{bag.price_paid}}" class="validate">
                     <label>Optional</label>
                 </div>
