--- a/templates/my_bagz.html
+++ b/templates/my_bagz.html
@@ -61,7 +61,9 @@
     <div class="ct-chart ct-perfect-fourth"></div>
 </div>
 <div class="container">
-    <div id='chartist_m3'></div>
+    <div>
+        <div class="ct-chart-two"></div>
+    </div>
 </div>
 
 {% endblock %}
